--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -3,7 +3,29 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="Pankeet Manubarwala" />
+    <meta name="description" content="This is a simple contact page where you can get in touch with Pankeet Manubarwala." />
+    <title>Pankeet Manubarwala</title>
+
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Person",
+      "name": "Pankeet Manubarwala",
+      "url": "https://contact-me-flax-nu.vercel.app/",
+      "image": "https://contact-me-flax-nu.vercel.app/PMlogo.png",
+      "jobTitle": "Software Developer",
+      "alumniOf": {
+        "@type": "CollegeOrUniversity",
+        "name": "G H Patel College of Engineering and Technology"
+      },
+      "knowsAbout": [
+        "React", "Node.js", "Express", "MongoDB", "Data Structures and Algorithms", "Tailwind", "Java"
+      ]
+    }
+    </script>
   </head>
+
   <body style="background-color: #ece9e2;">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
