--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Pankeet Manubarwala" />
     <meta name="description" content="This is a simple contact page where you can get in touch with Pankeet Manubarwala." />
-    <title>Pankeet Manubarwala</title>
+    <title>Pankeet Manubarwala | Contact</title>
 
     <script type="application/ld+json">
     {
